translation-tool/inputs/source_meta/objects/Brazil_Communication_Preferences__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail__c</fullName>
        <label>Mail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS__c</fullName>
        <label>SMS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Brazil_Communication_Preferences</label>
</CustomObject>